# plugbear-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
example/: Dockerfile  README.md  pyproject.toml
examples/fastapi/: main.py
examples/proofreading-bot-langchain/: README.md  main.py  pyproject.toml
examples/proofreading-bot-langserve/: README.md  main.py  pyproject.toml
examples/simple-openai-assistant/: README.md  main.py
plugbear/: __init__.py  fastapi.py
tests/api/: conftest.py  test_fastapi.py
tests/unit/: test_plugbear.py
