[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plugbear"
authors = [{name = "Runbear", email = "dev@runbear.io"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=0.16.0",
]

[project.urls]
Home = "https://plugbear.io/"
Source = "https://github.com/runbear-io/plugbear-python-sdk"

[project.optional-dependencies]
fastapi = ["fastapi"]

dev = ["plugbear[test]", "plugbear[lint]", "plugbear[fastapi]"]
test = [
    "pytest~=7.4",
    "pytest-asyncio~=0.23",
    "httpx",  # for fastapi.testclient
]
lint = [
    "ruff~=0.1",
    "mypy~=1.7",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.mypy]
python_version = "3.9"
allow_redefinition = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
no_warn_no_return = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Plugins
plugins = [
    "pydantic.mypy",
]
